--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: gentaxai-fastapi
     runtime: docker
-    dockerfilePath: ./Dockerfile
+    dockerfilePath: ./dockerfile
     envVars:
       - key: HOST
         value: 0.0.0.0
@@ -10,3 +10,4 @@ services:
         value: 8000
       - key: GROQ_MODEL
         value: llama-3.1-8b-instant
+
